# easel

./: .gitignore  README.md  TODOS.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: plan-ai-integration.md  plan-canvas-extensions.md  plan-canvas-implementation.md  plan-settings-dialog.md
easel-mcp/: Cargo.toml
easel-mcp/src/: easel.rs  server.rs
src/: app.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: easel.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: canvas.rs  claude.rs  mod.rs  watcher.rs
src-tauri/src/db/: canvas.rs
src/components/ui/: checkbox.tsx  dropdown-menu.tsx  menubar.tsx  resizable.tsx  scroll-area.tsx  select.tsx  slider.tsx  toggle-group.tsx
src/features/chat/: index.ts
src/features/chat/components/: chat-panel.tsx
src/features/chat/lib/: agent-names.ts
src/features/chat/store/: chat-store.ts
src/features/chat/types/: index.ts
src/features/editor/: constants.ts  index.ts
src/features/editor/components/: canvas-context-menu.tsx  code-panel.tsx  design-panel.tsx  editor-ai-chat.tsx  editor-canvas.tsx  editor-menu.tsx  editor-theme-dialog.tsx  editor-toolbar.tsx  editor-view.tsx  layers-panel.tsx  pages-panel.tsx  properties-panel.tsx  zoom-control.tsx
src/features/editor/engine/: canvaskit.ts  clipboard.ts  color.ts  fonts.ts  renderer.ts  scene-graph.ts  undo.ts
src/features/editor/hooks/: use-canvas-input.ts  use-canvas.ts  (+2 more)
src/hooks/: use-app-init.ts
src/lib/: canvas-thumbnail.ts  editor-core-test.ts
src/lib/api/: canvas.ts  claude.ts  watcher.ts
(+17 files in other folders)
