[package]
name = "easel"
version = "0.1.0"
description = "Easel — AI-powered collaborative design canvas"
authors = ["you"]
edition = "2021"

[lib]
name = "easel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process", "io-util"] }
tauri-plugin-dialog = "2.6.0"
notify = { version = "7", features = ["macos_kqueue"] }
chrono = "0.4"
base64 = "0.22"
